syntax = "proto3";
package protobuf;

// 服务端定义
service Greeter {
    // 服务端返馈信息方法
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 包含用户名的请求信息
message HelloRequest {
    string name = 1;
}

// 服务端响应信息
message HelloReply {
    string message = 1;
}
